--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsdom": "^26.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
@@ -26,6 +27,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
