--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
